Fix whitespace

--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,23 @@
 /* spacing */
 
 table {
-    table-layout: fixed;
-    width: 100%;
-    border-collapse: collapse;
-    border: 2px solid;
-    margin:20px;
-  }
+  table-layout: fixed;
+  width: 100%;
+  border-collapse: collapse;
+  border: 2px solid;
+  margin: 20px;
+}
 
-  th {
-      width: 20%;
-      border: 2px solid;
-  }
+th {
+  width: 20%;
+  border: 2px solid;
+}
 
-  td {
-      border: 1px solid;
-  }
+td {
+  border: 1px solid;
+}
 
-  th, td {
-      padding: 10px;
-  }
+th,
+td {
+  padding: 10px;
+}
